Hopefully the tests past in fact wait

--- a/posts/templates/posts/post_confirm_delete.html
+++ b/posts/templates/posts/post_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends 'posts/base.html' %}
+{% extends 'posts/templates/base.html' %}
 
 {% block title %}Delete posts - {{ posts.title }}{% endblock %}
 
