--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Sticky Notes App{% endblock %}</title>
+    <link rel="icon" href="{% static 'post/notes_icon.ico' %}" type="image/x-icon">
     <link rel="stylesheet" href="{% static 'post/styles.css' %}">
 </head>
 <body>
