--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -7,4 +7,9 @@
     <p>{{ post.content }}</p>
     <p>Created at: {{ post.created_at }}</p>
     <a href="{% url 'post_list' %}">Back to Post List</a>
+    <form method="post" action="{% url 'post_delete' post.pk %}">
+        {% csrf_token %}
+        <button type="submit">Delete</button>
+    </form>
 {% endblock %}
+
