--- a/static/post/styles.css
+++ b/static/post/styles.css
@@ -106,7 +106,7 @@ input[type="text"], textarea {
 }
 
 button[type="submit"] {
-    background-color: #000000;
+    background-color: #cc1717;
     color: white;
     padding: 10px 20px;
     border: none;
